# gambogidotcom

./: .gitignore  build-update.sh  cabal.sandbox.config  contact.md  gambogidotcom.cabal  index.html  site.hs
_site/: about.html  archive.html  contact.html  index.html
_site/css/: base.css  code.css  gambogi.css  index.css  main.css  ocamlcode.css
_site/posts/: 2015-02-22-compiler-economics.html
app/: Main.hs
content/articles/: 2015-10-21-simple-games-haskell.md  2016-01-09-xmonad-config.md  2016-03-15-computer-math.md
content/drafts/: 2016-01-10-setup-py.md  RightToBeForgotten.md
content/toplevel/: about.md  index.md  resume.conf  resume.html
css/: base.css  code.css  fira_code.css  main.css
drafts/: 2015-02-22-compiler-economics.md  ComputerMathRant
posts/: 2015-02-22-compiler-economics.md  2015-10-21-simple-games-haskell.md  2016-01-09-xmonad-config.md
scripts/: activity.js  mathjax_cfg.js
src/: Site.hs
src/Site/: Html.hs  Latex.hs  Prelude.hs
templates/: default.html  original.html
templates/tex/: article.tex
templates/web/: article.html  articles.html  default.html  index.html
