name:               gambogidotcom
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Site
                 ,  Site.Html
                 ,  Site.Latex
                 ,  Site.Prelude
  build-depends:    base >=  4.8
                  , hakyll >= 4.6
  ghc-options:      -threaded
  default-language: Haskell2010

executable site
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base >=  4.8
                  , hakyll
                  , gambogidotcom
  ghc-options:      -threaded
  default-language: Haskell2010
